Bug 154198 - TABLE: Second + second-last v-borders hidden in RTL documents after saving as DOCX and reopening
Summary: TABLE: Second + second-last v-borders hidden in RTL documents after saving as...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Tables Table-Borders DOCX-RTL
  Show dependency treegraph
 
Reported: 2023-03-15 08:06 UTC by Mahmoud Alnaanah
Modified: 2023-11-05 12:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (ODT) (9.49 KB, application/vnd.oasis.opendocument.text)
2023-09-19 12:45 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mahmoud Alnaanah 2023-03-15 08:06:53 UTC
Description:
Go to: Format>Page Style>Text direction>Right-to-left.
Create a 5x5 Table.
The second and before-last vertical lines are always hidden.
This bug didn't exist in older versions like: 7.1 (which I am using now because of this bug)
Tested on Kubuntu Linux 22.04

Steps to Reproduce:
1- Go to: Format>Page Style>Text direction>Right-to-left.
2- Create a 5x5 Table.


Actual Results:
The second and before-last vertical lines are always hidden.

Expected Results:
No hidden lines


Reproducible: Always


User Profile Reset: No

Additional Info:
Only on right-to-left documents
Comment 1 Dieter 2023-03-30 16:03:09 UTC
Have you tested with actual version LO 7.5?
Comment 2 Mahmoud Alnaanah 2023-04-02 16:43:07 UTC
The bug does not present in release 7.5.2. However, it presents in previous releases, like 7.4.
Comment 3 QA Administrators 2023-04-03 03:23:34 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2023-04-05 12:09:08 UTC
(In reply to Mahmoud Alnaanah from comment #2)
> The bug does not present in release 7.5.2. However, it presents in previous
> releases, like 7.4.

Great, so let's close.
Comment 5 Mahmoud Alnaanah 2023-05-18 19:10:37 UTC
Status update: Sorry for reporting that the bug is resolved, in fact it is not.
The bug exists since version 7.2 in files saved as docx format.

To produce the bug.

1- Open new writer document.
2- From: Tools>options>Language Settings> Languages>Enable complex text layout and set to Arabic Jordan.
3- Create 5x5 table.
4- Save the file as docx format.
5- Close the file.
6- Reopen the file. 
7- Notice that the second  and the before final vertical lines are hidden.

Regards,
Comment 6 Mahmoud Alnaanah 2023-05-18 19:14:52 UTC
I missed step in previous comment. You need step 3 in this new comment.


To produce the bug.

1- Open new writer document.
2- From: Tools>options>Language Settings> Languages>Enable complex text layout and set to Arabic Jordan.

3- From: Format>Page style> Change text direction to right-to-left.

4- Create 5x5 table.
5- Save the file as docx format.
6- Close the file.
7- Reopen the file. 
8- Notice that the second  and the before final vertical lines are hidden.

Regards,
Comment 7 Dieter 2023-05-21 12:50:34 UTC
I confirm it with

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 4b3d3354119b643ec20aaad187d0a6506ea307fb
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 8 Mahmoud Alnaanah 2023-09-15 09:29:56 UTC
Any updates about this bug, it is really annoying and forced me to use Libreoffice 7.1.8. Which is very old and has its own problem.

Please give this bug a priority.
Comment 9 Buovjaga 2023-09-19 12:45:23 UTC
Bibisected with linux-64-7.3 to 0dbecd2d2ebe18a262cfab96e105637840b5b7fe
sw: fix too long inner borders intersecting with outer borders for Word cells

When bibisecting, I noticed some commits already showed the specific inner borders hidden when opening the .odt.
Comment 10 Buovjaga 2023-09-19 12:45:48 UTC
Created attachment 189699 [details]
Example file (ODT)

Save this to DOCX
Comment 11 Commit Notification 2023-09-22 06:33:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/652ab50ce18d0ce7fa1209e6bcf3b10ac5c9a933

tdf#154198 sw: fix lost vertical table cell borders for WordTableCell + RTL

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Mahmoud Alnaanah 2023-09-22 10:40:14 UTC
It is good new that the problem is fixed. Will the fix be applied to version 7.6.x or 7.5.x?
Comment 13 Miklos Vajna 2023-09-22 11:57:05 UTC
Yes, backport is already pending review here: https://gerrit.libreoffice.org/c/core/+/157166
Comment 14 Commit Notification 2023-09-26 11:40:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0721b09329f88c9206e02afaff832c71065618ee

tdf#154198 sw: fix lost vertical table cell borders for WordTableCell + RTL

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Dieter 2023-11-05 12:30:10 UTC
VERIFIED with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c0c8cffd3541e3cd616c96791b04e7ebf2b2ed03
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Miklos, thanks for fixing it!