tdf#154198 sw: fix lost vertical table cell borders for WordTableCell + RTL

This went wrong in commit 0dbecd2d2ebe18a262cfab96e105637840b5b7fe (sw:
fix too long inner borders intersecting with outer borders for Word
cells, 2022-01-06), the problem is that in its current form this assumes
that the first cell is on the left and the last cell is on the right,
which is not true for RTL, so only tweak the length of the borders in
the LTR case.

(cherry picked from commit 652ab50ce18d0ce7fa1209e6bcf3b10ac5c9a933)

Change-Id: I513af974855496e507134cf156f9ee5a937a46db
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157166
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>